--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/healhub
-spring.datasource.username=healhub
-spring.datasource.password=healhub
+spring.datasource.username=postgres
+spring.datasource.password=#RLDPr4d02004
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-server.port=8080
+server.port=8081
